--- a/.github/workflows/sync_action.yml
+++ b/.github/workflows/sync_action.yml
@@ -1,34 +1,26 @@
-# @format
-
-name: Sync Repos
+name: Sync to GitLab
 
 on:
   push:
     branches:
-      - main
-  # You can add more triggers, such as scheduled events
-  # schedule:
-  #   - cron: '0 0 * * *'
+      - main # or the branch you want to sync
 
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Push to destination repository
-        run: |
-          git config --global user.email "rosnin_m@hotmail.com"
-          git config --global user.name "rosninmustaffa"
-          git clone https://${{ env.ORG_NAME }}:${{ secrets.PAT }}@github.com/${{ env.ORG_NAME }}/https://gitlab.com/dev3093023/project03.git
-          cd https://gitlab.com/dev3093023/project03.git
-          git remote add ${{ env.ORIGINAL_REPO_NAME }} https://${{ env.ORG_NAME }}:${{ secrets.PAT }}@github.com/${{ env.ORG_NAME }}/${{ env.ORIGINAL_REPO_NAME }}.git
-          git remote update
-          git merge ${{ env.ORIGINAL_REPO_NAME }}/main
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-          ORIGINAL_REPO_NAME: ${{ github.event.repository.name }}
-          ORG_NAME: Your workspace name
+    - name: Set up Git
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
+    - name: Push to GitLab
+      env:
+        GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+      run: |
+        git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/rosninmustaffa/project03.git
+        git push gitlab main --force
